Fix article header text spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -154,7 +154,8 @@ article ul {
    ------------------------------------------------------------------------------*/
 #article-header {
   background-color: #222;
-  height: 40px;
+  height: 38px;
+  line-height: 38px;
   font-family: Roboto, sans-serif;
   font-size: 14px;
   text-align: center;
